<resources>
    <string name="app_name">RoadsAround</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Регистрация</string>
    <string name="login">Вход</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="restore_password">Восстановить пароль</string>
    <string name="enter_email_to_restore_password">Укажите почту для восстановления пароля</string>
    <string name="mail_sent">Письмо восстановления пароля отправлено на указанный адрес</string>
    <string name="auth_successful">Авторизация прошла успешно</string>
    <string name="auth_fields_empty">Поля авторизации не заполнены</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="authentication">Авторизация</string>
    <string name="Back">Назад</string>
    <string name="register">Зарегистрироваться</string>
    <string name="required_data_fields_empty">Необходимые поля данных не заполнены</string>
    <string name="reg_successful">Регистрация прошла успешно</string>
    <string name="reg_unsuccessful">Регистрация не состоялась</string>
    <string name="main">Главная</string>
    <string name="warning">Предупреждение</string>
    <string name="you_shure_log_out">Вы уверены, что хотите выйти из аккаунта?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="profile">Профиль</string>
    <string name="search">Поиск</string>
    <string name="routes">Маршруты</string>
    <string name="could_not_load_data_from_networks">Не удалось загрузить данные из сети</string>
    <string name="failed_launch_camera_app">Не удалось запустить приложение камеры</string>
    <string name="par_chat">Чат участников</string>
    <string name="send">Отправить</string>
    <string name="сould_not_load_data">Не удалось загрузить данные</string>
    <string name="auth_unsuccessful">Авторизация не состоялась</string>
    <string name="restore_pass_unsuccessfull">Не удалось восстановить пароль</string>
    <string name="message_load_unsuccess">Не удалось загрузить сообщение</string>
    <string name="name">Имя</string>
    <string name="text_message">Текст сообщения</string>
    <string name="time">Время</string>
    <string name="incorrectly_entered_text">Некорректно введённый текст</string>
    <string name="title">Название</string>
    <string name="motion_type">Тип движения</string>
    <string name="add_event">Добавить событие</string>
    <string name="description">Описание</string>
    <string name="road">Маршрут</string>
    <string name="create">Создать</string>
    <string name="event_creation">Создание события</string>
    <string name="confirm">Подтвердить</string>
    <string name="settings_route">Установка маршрута</string>
    <string name="edit_profile">изменить профиль</string>
    <string name="back">Назад</string>
    <string name="cancel_from_profile">выйти из профиля</string>
    <string name="chat">Чат</string>
    <string name="select_date">Выберите дату</string>
    <string name="could_not_get_the_location_data">Не удалось получить данные о местоположении</string>
    <string name="failed_bind_route">Не удалось построить маршрут</string>
    <string name="route_not_complete">Маршрут недостроен</string>
    <string name="foot">Пешком</string>
    <string name="bicycle">Велосипед</string>
    <string name="scooter">Самокат</string>
    <string name="car">Автомобиль</string>
    <string name="motorbike">Мотоцикл</string>
    <string name="not_all_necessary_data">Указаны не все необходимые данные</string>
    <string name="organizer">Организатор</string>
    <string name="participate">Принять участие</string>
    <string name="members">Участники</string>
    <string name="route">Маршрут</string>
    <string name="event">Событие</string>
    <string name="leave_from_event">Покинуть событие</string>
    <string name="edit_event">Изменить событие</string>
    <string name="failed_load_data">Не удалось загрузить данные</string>
    <string name="try_load_again">Повторить загрузку</string>
    <string name="my_events">Мои события</string>
    <string name="create_event_unsuccessful">Не удалось создать событие</string>
    <string name="star_symbol">*</string>
    <string name="add_user_photo">Добавить фото пользователя</string>
    <string name="type_particpate">Тип участия</string>
    <string name="member">Участник</string>
    <string name="no_events">Нет событий</string>
    <string name="participate_status">Статус участия</string>

    <string-array name="motionType">
        <item>@string/foot</item>
        <item>@string/bicycle</item>
        <item>@string/scooter</item>
        <item>@string/car</item>
        <item>@string/motorbike</item>
    </string-array>
</resources>