<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/profileFragment"
        android:contentDescription="@string/profile"
        android:enabled="true"
        android:icon="@drawable/outline_person_24"
        android:title="@string/profile" />
    <item
        android:id="@id/routesFragment"
        android:contentDescription="@string/my_events"
        android:enabled="true"
        android:icon="@drawable/outline_route_24"
        android:title="@string/my_events" />
    <item
        android:id="@id/searchEventFragment"
        android:contentDescription="@string/search"
        android:enabled="true"
        android:icon="@drawable/outline_travel_explore_24"
        android:title="@string/search" />
</menu>